Fixed scrollbar in all page

--- a/src/pages/schedule/css/style.scss
+++ b/src/pages/schedule/css/style.scss
@@ -1,6 +1,4 @@
-body {
-  overflow: auto !important;
-}
+
 
 @media only screen and (min-width: 957px) {
   #format-time {
